# Face-Anti-Spoofing

./: .gitignore  CMakeLists.txt  GetPot  README.md  antispoofing_detection.cpp  antispoofing_detection.h  face_detection.cpp  face_detection.h  main.cpp  my_functions.cpp  my_functions.h
include/: antispoofing_detection.h  face_detection.h  final_prediction.h  parameters.h  utilities.h
src/: GetPot.cpp  antispoofing_detection.cpp  data.json  face_detection.cpp  final_prediction.cpp  parameters.cpp  utilities.cpp
